Added support for Exposed ORM, wrote logic to create url, get url by user id, and delete url